test/errors/scan_bad_coding_no_cascade.py
# coding: uft-8
é
